# lab1_linal

./: CMakeLists.txt  README.md  main.cpp
includes/: experiments.h  gaussian.h  lu.h  matrix_util.h  matrix_utilities.h  timer.h  types.h
src/: experiments.cpp  gaussian.cpp  lu.cpp  matrix_util.cpp  timer.cpp
